--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="book_status_later">Later (%s)</string>
     <string name="book_status_later2">Books marked \'Later\'</string>
     <string name="book_status_completed2">Books marked \'Completed\'</string>
-    <string name="book_status_any">All books</string>
+    <string name="book_status_any">E-LIBRARY</string>
     <string name="book_status_started">Open books</string>
     <string name="book_status_none">Unread books</string>
     <string name="mark">Show…</string>
